# Git2QtTests

./: CMakeLists.txt  README.md
src/: credentialresolver.cpp  credentialresolver.h  examples.cpp  examples.h  main.cpp  testexception.h  testthread.cpp  testthread.h
